# FTXFundingAlerter

./: .gitignore  FTXClient.py  README.md  TelegramClient.py  desafio.ipynb  funding_alert.py  pyproject.toml
